--- a/config.h.in
+++ b/config.h.in
@@ -70,7 +70,7 @@
 #undef RISCV_ENABLED
 
 /* Enable commit log generation */
-#undef RISCV_ENABLE_COMMITLOG
+#define RISCV_ENABLE_COMMITLOG
 
 /* Enable hardware management of PTE accessed and dirty bits */
 #undef RISCV_ENABLE_DIRTY
