--- a/riscv/riscv.mk.in
+++ b/riscv/riscv.mk.in
@@ -29,6 +29,8 @@ riscv_hdrs = \
 	debug_rom_defines.h \
 	remote_bitbang.h \
 	jtag_dtm.h \
+	ibda.h \
+	ibda_hash.h
 
 riscv_install_hdrs = mmio_plugin.h
 
@@ -56,6 +58,7 @@ riscv_srcs = \
 	remote_bitbang.cc \
 	jtag_dtm.cc \
 	$(riscv_gen_srcs) \
+	ibda_hash.cc
 
 riscv_test_srcs =
 
