--- a/testing/Makefile
+++ b/testing/Makefile
@@ -3,14 +3,17 @@ INCLUDE= "-I../riscv/"
 
 .PHONY: all
 
+bloom.o: ../riscv/bloom.cc
+	$(CC) -c -o $@ $< $(INCLUDE)
+
 ibda_hash.o: ../riscv/ibda_hash.cc
 	$(CC) -c -o $@ $< $(INCLUDE)
 
 unit_test.o: unit_test.cc
 	$(CC) -c -o $@ $< $(INCLUDE)
 
-all: unit_test.o ibda_hash.o
-	$(CC) -o run.X unit_test.o ibda_hash.o
+all: unit_test.o ibda_hash.o bloom.o
+	$(CC) -o run.X unit_test.o ibda_hash.o bloom.o
 
 .PHONY: clean
 
